fix: SpaceCard options spacing

--- a/src/components/SpaceCard/SpaceCard.module.css
+++ b/src/components/SpaceCard/SpaceCard.module.css
@@ -57,7 +57,7 @@
 
 .options {
   display: grid;
-  gap: 0.5rem;
+  gap: 1rem;
   margin-left: 1em;
 }
 
